# String-Search-Server

./: CRITICAL_TEST_GAPS.md  DEPLOYMENT.md  PEP8_COMPLIANCE_GUIDE.md  PERFORMANCE_GUARANTEES.md  README.md  SSL_SETUP_GUIDE.md  coverage.json  coverage_details.json  dummy.conf  final_comprehensive_fix.py  fix_all_issues.py  fix_boolean_expectations.py  fix_specific_tests.py  manage-server-wsl.sh  minimal_config.conf  pyproject.toml  requirements.txt  restore_config_test.py  restore_fixed_imports.py  start-server-wsl.sh  test_error_messages.py  test_fixes.py  verify_fixes.py
client/: __init__.py  client.py
config/: cert.pem  key.pem  performance_test.conf  performance_test_false.conf  reread_true_test.conf  server_config.conf  temp_dynamic.conf
data/: sample.txt  sample_text.txt  test_10000.txt  test_100000.txt  test_250000.txt  test_50000.txt
deploy/: install.sh  manage-server.sh  setup-wsl.sh  string-search-server.service  uninstall.sh
reports/: benchmark_report_20251105_022337.pd  benchmark_report_20251105_022616.pd  benchmark_report_20251105_022646.pd  benchmark_report_20251105_022912.pd  benchmark_report_20251105_023637.pd  benchmark_report_20251105_024142.pd  benchmark_report_20251105_024423.pd  benchmark_report_20251105_024447.pd  benchmark_report_20251105_024506.pd  benchmark_report_20251105_024527.pd  benchmark_report_20251105_024609.pd  benchmark_results_20251101_070903.csv  benchmark_results_20251101_071204.csv  benchmark_results_20251102_164303.csv  benchmark_results_20251102_164413.csv  benchmark_results_20251102_165459.csv  pep8_compliance_report.json  (+14 more)
(+247 files in other folders)
